Removed the gigclaw prefix from gigclaw env example secret variables

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@
 OPENAI_API_KEY=sk-your-key-here
 
 # Application Settings
-GIGCLAW_MAX_APPLICATIONS_PER_DAY=10
-GIGCLAW_MIN_MATCH_SCORE=75
-GIGCLAW_MODEL=gpt-4-turbo-preview
+MAX_APPLICATIONS_PER_DAY=10
+MIN_MATCH_SCORE=75
+MODEL=gpt-4-turbo-preview
 
 AUTO_APPLY = false
