--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 OPENAI_API_KEY=sk-your-key-here
 
 # Application Settings
-MAX_APPLICATIONS_PER_DAY=10
+MAX_JOBS_PER_RUN=10
 MIN_MATCH_SCORE=75
 MODEL=gpt-4-turbo-preview
 
